fix: 발화 지속 시간 기능 삭제
